[package]
name = "socketioxide-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.31", features = ["serde"] }
socketioxide = { version = "0.9.0", features = ["state"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
